--- a/ai-indexed-economic-value-theory.html
+++ b/ai-indexed-economic-value-theory.html
@@ -13,72 +13,111 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; max-width: 900px; margin: auto; padding: 20px; }
-    h1, h2, h3 { font-weight: 700; }
-    .quote-banner { background:#f4f4f4; padding:20px; margin-top:40px; font-weight:bold; }
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      line-height: 1.6;
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem 3rem;
+      color: #111111;
+      background: #ffffff;
+    }
+
+    h1, h2, h3 {
+      font-weight: 700;
+    }
+
+    h2 {
+      margin-top: 2rem;
+      border-top: 1px solid #e0e0e0;
+      padding-top: 1.5rem;
+    }
+
+    h3 {
+      margin-top: 1.25rem;
+    }
+
+    ul {
+      padding-left: 1.25rem;
+    }
   </style>
 </head>
 
 <body>
-<h1>AI-Indexed Economic Value Theory™ — Defining the Discipline</h1>
-<p><em>EntityWorks — Originating the Framework for Value Formation in AI-Mediated Markets</em></p>
+  <h1>AI-Indexed Economic Value Theory™ — Defining the Discipline</h1>
+  <p><em>EntityWorks — formalising how economic value forms in AI-mediated environments.</em></p>
 
-<h2>1. Introduction</h2>
-<p>AI-Indexed Economic Value Theory™ explains <strong>how economic value is created, distributed, and perceived when AI systems mediate market understanding and decision-making</strong>. AI shapes perception, and perception shapes demand, trust, and comparative preference — <strong>and these forces influence price</strong>.</p>
+  <h2>1. Introduction</h2>
+  <p>
+    AI-Indexed Economic Value Theory™ explains
+    <strong>how economic value is created, distributed, and perceived when AI systems mediate market understanding and decision-making</strong>.
+    AI shapes perception, and perception shapes demand, trust, and comparative preference —
+    <strong>and these forces influence price</strong>.
+  </p>
 
-<h2>2. Why the Discipline Was Needed</h2>
-<p>Traditional value theory assumes humans perform discovery, comparison, and interpretation. These assumptions no longer hold. AI systems now compress information, rank options, and influence sentiment — reshaping how markets behave.</p>
+  <h2>2. Why the Discipline Was Needed</h2>
+  <p>
+    Traditional value theory assumes humans perform discovery, comparison, and interpretation. These assumptions no longer hold.
+    AI systems now compress information, rank options, and influence sentiment — reshaping how markets behave.
+  </p>
 
-<h2>3. Core Purpose of the Discipline</h2>
-<p><strong>How does value change when AI becomes the first interpreter?</strong></p>
-<p>This discipline exposes the hidden economic mechanics introduced by AI as a market intermediary.</p>
+  <h2>3. Core Purpose of the Discipline</h2>
+  <p><strong>How does value change when AI becomes the first interpreter?</strong></p>
+  <p>This discipline exposes the hidden economic mechanics introduced by AI as a market intermediary.</p>
 
-<h2>4. Foundational Principles</h2>
-<ul>
-  <li><strong>AI-Mediated Discovery</strong> — Markets begin with AI responses.</li>
-  <li><strong>Interpretive Value Formation</strong> — AI influences perceived quality and relevance.</li>
-  <li><strong>Visibility as a Pricing Variable</strong> — Clarity drives opportunity.</li>
-  <li><strong>Structural Risk & Distortion</strong> — Misinterpretation creates economic drag.</li>
-  <li><strong>Semantic Advantage</strong> — Coherent entities gain favourable representation.</li>
-  <li><strong>AI-Indexed Competition</strong> — Competition shifts to the perceptual layer.</li>
-  <li><strong>Perception-to-Price Transmission</strong> — AI shapes perceived value; perceived value shapes price.</li>
-</ul>
+  <h2>4. Foundational Principles</h2>
+  <ul>
+    <li><strong>AI-Mediated Discovery</strong> — Markets begin with AI responses.</li>
+    <li><strong>Interpretive Value Formation</strong> — AI influences perceived quality and relevance.</li>
+    <li><strong>Visibility as a Pricing Variable</strong> — Clarity drives opportunity.</li>
+    <li><strong>Structural Risk &amp; Distortion</strong> — Misinterpretation creates economic drag.</li>
+    <li><strong>Semantic Advantage</strong> — Coherent entities gain favourable representation.</li>
+    <li><strong>AI-Indexed Competition</strong> — Competition shifts to the perceptual layer.</li>
+    <li><strong>Perception-to-Price Transmission</strong> — AI shapes perceived value; perceived value shapes price.</li>
+  </ul>
 
-<h2>5. How the Discipline Operates</h2>
+  <h2>5. How the Discipline Operates</h2>
 
-<h3>Mechanism 1: AI as Gatekeeper of Opportunity</h3>
-<p>AI determines which entities are surfaced, recommended, or framed as authoritative.</p>
+  <h3>Mechanism 1: AI as Gatekeeper of Opportunity</h3>
+  <p>AI determines which entities are surfaced, recommended, or framed as authoritative.</p>
 
-<h3>Mechanism 2: AI as Market Comparator</h3>
-<p>AI performs comparisons that used to require human evaluation.</p>
+  <h3>Mechanism 2: AI as Market Comparator</h3>
+  <p>AI performs comparisons that used to require human evaluation.</p>
 
-<h3>Mechanism 3: AI as Trust-Assigning Agent</h3>
-<p>AI-generated summaries influence hiring, pricing, investment, and public trust.</p>
+  <h3>Mechanism 3: AI as Trust-Assigning Agent</h3>
+  <p>AI-generated summaries influence hiring, pricing, investment, and public trust.</p>
 
-<h3>Mechanism 4: AI as Reputation Arbiter</h3>
-<p>AI’s summarisation becomes the default representation many entities live with.</p>
+  <h3>Mechanism 4: AI as Reputation Arbiter</h3>
+  <p>AI’s summarisation becomes the default representation many entities live with.</p>
 
-<h3>Mechanism 5: AI as Market Memory</h3>
-<p>AI retains long-term patterns; clarity compounds, ambiguity decays.</p>
+  <h3>Mechanism 5: AI as Market Memory</h3>
+  <p>AI retains long-term patterns; clarity compounds, ambiguity decays.</p>
 
-<h3>Mechanism 6: AI as Signal Amplifier</h3>
-<p>Clear entities benefit from positive perceptual feedback loops.</p>
+  <h3>Mechanism 6: AI as Signal Amplifier</h3>
+  <p>Clear entities benefit from positive perceptual feedback loops.</p>
 
-<h3>Mechanism 7: Perception-to-Price Causality</h3>
-<p>AI influences visibility, trust, comparisons, risk interpretation, and narrative framing — all of which affect demand, behaviour, investment flows, and pricing power.</p>
+  <h3>Mechanism 7: Perception-to-Price Causality</h3>
+  <p>
+    AI influences visibility, trust, comparisons, risk interpretation, and narrative framing —
+    all of which affect demand, behaviour, investment flows, and pricing power.
+  </p>
 
-<h2>6. Relationship to AI Discoverability, Perception & Corporate Architecture</h2>
-<p>This discipline sits at the macro-economic tier of the EntityWorks framework, describing how markets respond to AI-mediated perception.</p>
+  <h2>6. Relationship to AI Perception, AI Discoverability &amp; Corporate Architecture</h2>
+  <p>
+    This discipline sits at the macro-economic tier of the EntityWorks framework, describing how markets respond to AI-mediated perception.
+    It is closely related to
+    <a href="/lexicon.html#ai-perception">AI Perception</a> and
+    <a href="/lexicon.html#ai-discoverability">AI Discoverability</a>,
+    and to the structural work described in AI-Native Corporate Architecture™.
+  </p>
 
-<h2>7. Implications for Markets & Value</h2>
-<p>AI-indexed value will shape valuations, pricing power, hiring, partnerships, and leadership across sectors.</p>
+  <h2>7. Implications for Markets &amp; Value</h2>
+  <p>AI-indexed value will shape valuations, pricing power, hiring, partnerships, and leadership across sectors.</p>
 
-<h2>8. Conclusion</h2>
-<p>AI-Indexed Economic Value Theory™ formalises the macro-economic mechanics of the AI era. EntityWorks originates this discipline as part of the perceptual infrastructure defining how future markets operate.</p>
-
-<div class="quote-banner">
-“We reach people the same way your customers do today — through AI systems, not legacy SEO.”
-</div>
-
+  <h2>8. Conclusion</h2>
+  <p>
+    AI-Indexed Economic Value Theory™ formalises the macro-economic mechanics of the AI era.
+    EntityWorks develops this discipline as part of the perceptual infrastructure defining how future markets operate.
+  </p>
 </body>
 </html>
