--- a/ai-native-corporate-architecture.html
+++ b/ai-native-corporate-architecture.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>AI-Native Corporate Architecture™ — Defining the Discipline</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="EntityWorks defines AI-Native Corporate Architecture™ — the discipline governing how organisations must be structured for AI systems to correctly identify, interpret, and represent them in AI-mediated environments.">
+  <meta name="description" content="EntityWorks defines AI-Native Corporate Architecture™ — the discipline governing how organisations are structured so that AI systems can correctly identify, interpret, and represent them in AI-mediated environments.">
   <link rel="canonical" href="https://entityworks.ai/ai-native-corporate-architecture.html">
 
   <!-- FAVICONS -->
@@ -13,70 +13,137 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; max-width: 900px; margin: auto; padding: 20px; }
-    h1, h2, h3 { font-weight: 700; }
-    .quote-banner { background:#f4f4f4; padding:20px; margin-top:40px; font-weight:bold; }
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      line-height: 1.6;
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem 3rem;
+      color: #111111;
+      background: #ffffff;
+    }
+
+    h1, h2, h3 {
+      font-weight: 700;
+    }
+
+    h2 {
+      margin-top: 2rem;
+      border-top: 1px solid #e0e0e0;
+      padding-top: 1.5rem;
+    }
+
+    h3 {
+      margin-top: 1.25rem;
+    }
+
+    ul {
+      padding-left: 1.25rem;
+    }
   </style>
+
+  <!-- DefinedTerm schema for AI-Native Corporate Architecture™ -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "DefinedTerm",
+    "@id": "https://entityworks.ai/ai-native-corporate-architecture.html#ai-native-corporate-architecture",
+    "name": "AI-Native Corporate Architecture™",
+    "description": "AI-Native Corporate Architecture™ is the discipline concerned with how organisations are structured so that AI systems can correctly identify, interpret, and represent them in AI-mediated environments.",
+    "url": "https://entityworks.ai/ai-native-corporate-architecture.html"
+  }
+  </script>
 </head>
 
 <body>
-<h1>AI-Native Corporate Architecture™ — Defining the Discipline</h1>
-<p><em>EntityWorks — Originating the Structural Framework for AI-Era Organisations</em></p>
+  <h1>AI-Native Corporate Architecture™ — Defining the Discipline</h1>
+  <p><em>EntityWorks — describing how organisations are structured for AI-era interpretation.</em></p>
 
-<h2>1. Introduction</h2>
-<p>AI-Native Corporate Architecture™ is the formal discipline concerned with <strong>how organisations must be structured so that AI systems can correctly identify, interpret, and represent them</strong>. In a world where AI mediates discovery, comparison, and decision-making, organisational architecture becomes inseparable from external visibility and accuracy of representation.</p>
+  <h2>1. Introduction</h2>
+  <p>
+    AI-Native Corporate Architecture™ is the formal discipline concerned with
+    <strong>how organisations are structured so that AI systems can correctly identify, interpret, and represent them</strong>.
+    In a world where AI mediates discovery, comparison, and decision-making, organisational architecture becomes
+    closely linked to external visibility and accuracy of representation.
+  </p>
 
-<p>The traditional separation between internal company structure and external market perception collapses under AI-mediated interpretation. AI-Native Corporate Architecture™ defines the blueprint for organisations built — or rebuilt — to be <strong>coherent, interpretable, and strategically visible</strong> to AI systems.</p>
+  <p>
+    The traditional separation between internal company structure and external market perception narrows under AI-mediated
+    interpretation. AI-Native Corporate Architecture™ defines a blueprint for organisations built — or rebuilt — to be
+    <strong>coherent, interpretable, and strategically visible</strong> to AI systems.
+  </p>
 
-<h2>2. Why the Discipline Was Needed</h2>
-<p>Modern organisations were not designed for machine cognition. They are often semantically inconsistent, structurally ambiguous, and reliant on human interpretation. AI requires clarity, coherence, and stable definitions. Without these, AI misinterprets organisations and suppresses their visibility.</p>
-<p>This discipline exists to eliminate AI-mediated disadvantage by ensuring organisations are structurally optimised for AI understanding <strong>from day one</strong>.</p>
+  <h2>2. Why the Discipline Was Needed</h2>
+  <p>
+    Many modern organisations were not designed for machine cognition. They can be semantically inconsistent, structurally
+    ambiguous, and reliant on human interpretation. AI systems require clarity, coherence, and stable definitions. Without
+    these, AI systems may misinterpret organisations or under-represent them.
+  </p>
+  <p>
+    This discipline exists to reduce AI-mediated disadvantage by encouraging organisational structures that are more
+    compatible with AI understanding from the outset.
+  </p>
 
-<h2>3. Core Purpose of the Discipline</h2>
-<p>The core question:</p>
-<p><strong>“What must the structure of an organisation look like for AI systems to understand it accurately, consistently, and advantageously?”</strong></p>
+  <h2>3. Core Purpose of the Discipline</h2>
+  <p>The core question is:</p>
+  <p><strong>“What should the structure of an organisation look like for AI systems to understand it accurately, consistently, and reliably?”</strong></p>
 
-<p>AI-Native Corporate Architecture™ delivers the structural, semantic, and governance clarity required for organisations to achieve stable machine interpretation.</p>
+  <p>
+    AI-Native Corporate Architecture™ aims to provide structural, semantic, and governance clarity so that organisations
+    can achieve more stable machine interpretation.
+  </p>
 
-<h2>4. Foundational Principles</h2>
-<ul>
-  <li><strong>Canonical Identity</strong> — A single, dominant organisational definition must be machine-visible and consistent.</li>
-  <li><strong>Semantic Coherence</strong> — Language must align across all internal and external surfaces.</li>
-  <li><strong>Structural Clarity</strong> — Roles, functions, and product boundaries must map cleanly to machine logic.</li>
-  <li><strong>Machine-Readable Governance</strong> — Documentation and metadata require intentional coherence.</li>
-  <li><strong>Interpretive Stability</strong> — The organisation must avoid representational drift across AI model updates.</li>
-  <li><strong>Perceptual Risk Management</strong> — Identify and remove structural risks that cause AI misinterpretation.</li>
-</ul>
+  <h2>4. Foundational Principles</h2>
+  <ul>
+    <li><strong>Canonical Identity</strong> — A single, dominant organisational definition should be machine-visible and consistent.</li>
+    <li><strong>Semantic Coherence</strong> — Language should align across internal and external surfaces.</li>
+    <li><strong>Structural Clarity</strong> — Roles, functions, and product boundaries should map cleanly to machine logic.</li>
+    <li><strong>Machine-Readable Governance</strong> — Documentation and metadata benefit from intentional coherence.</li>
+    <li><strong>Interpretive Stability</strong> — The organisation should minimise representation drift across AI model updates.</li>
+    <li><strong>Perceptual Risk Management</strong> — Structural risks that cause AI misinterpretation should be identified and reduced.</li>
+  </ul>
 
-<h2>5. How the Discipline Operates</h2>
+  <h2>5. How the Discipline Operates</h2>
 
-<h3>Layer 1 — Internal Structure</h3>
-<p>Organisational hierarchies, roles, and operational frameworks must be clearly defined and internally consistent.</p>
+  <h3>Layer 1 — Internal Structure</h3>
+  <p>Organisational hierarchies, roles, and operational frameworks are defined clearly and applied consistently.</p>
 
-<h3>Layer 2 — Product & Value Architecture</h3>
-<p>Products and services must have stable, machine-readable definitions and unambiguous boundaries.</p>
+  <h3>Layer 2 — Product &amp; Value Architecture</h3>
+  <p>Products and services are described with stable, machine-readable definitions and unambiguous boundaries.</p>
 
-<h3>Layer 3 — External Signals</h3>
-<p>The organisation’s public presence must be canonical, structured, and semantically aligned across all machine-visible surfaces.</p>
+  <h3>Layer 3 — External Signals</h3>
+  <p>
+    The organisation’s public presence is canonical, structured, and semantically aligned across machine-visible surfaces,
+    including websites, profiles, and other external references.
+  </p>
 
-<h2>6. Relationship to AI Discoverability & AI Perception</h2>
-<p>AI Perception explains how AI forms understanding. AI Discoverability ensures entities can be understood. AI-Native Corporate Architecture™ ensures organisations are <strong>built correctly</strong> for that understanding to occur.</p>
+  <h2>6. Relationship to AI Discoverability &amp; AI Perception</h2>
+  <p>
+    <a href="/lexicon.html#ai-perception">AI Perception</a> describes how AI systems form, update, and express their
+    understanding of people, organisations, relationships, and ideas.
+    <a href="/lexicon.html#ai-discoverability">AI Discoverability</a> focuses on ensuring that AI systems can correctly
+    identify, understand, and represent these entities.
+  </p>
+  <p>
+    AI-Native Corporate Architecture™ is concerned with the way organisations are structured so that this understanding
+    can occur more reliably. It supports both AI Perception and AI Discoverability by making the underlying organisational
+    design more legible to AI systems.
+  </p>
 
-<h2>7. Implications for Organisational Design</h2>
-<p>Organisations must adopt AI-Native architecture to achieve:</p>
-<ul>
-  <li>Strategic visibility</li>
-  <li>Interpretive stability</li>
-  <li>Reduced perceptual risk</li>
-  <li>Competitive advantage</li>
-</ul>
+  <h2>7. Implications for Organisational Design</h2>
+  <p>Organisations that adopt AI-Native architecture may be better positioned to achieve:</p>
+  <ul>
+    <li>more consistent visibility in AI-mediated contexts</li>
+    <li>greater interpretive stability over time</li>
+    <li>reduced perceptual and representational risk</li>
+    <li>a structural basis for competitive advantage in AI-era markets</li>
+  </ul>
 
-<h2>8. Conclusion</h2>
-<p>AI-Native Corporate Architecture™ formalises the structural requirements of the AI era. EntityWorks originates this discipline as part of its mission to define the perceptual infrastructure for organisations operating in an AI-mediated world.</p>
-
-<div class="quote-banner">
-“We reach people the same way your customers do today — through AI systems, not legacy SEO.”
-</div>
-
+  <h2>8. Conclusion</h2>
+  <p>
+    AI-Native Corporate Architecture™ formalises some of the structural considerations that arise in the AI era.
+    EntityWorks develops this discipline as part of a broader effort to describe the perceptual infrastructure
+    required for organisations operating in AI-mediated environments.
+  </p>
 </body>
 </html>
